--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 #Mon May 09 16:38:18 EDT 2011
 project.organization=Hinz Co
 project.name=SEPTA Next to Arrive Tool
-sbt.version=0.7.4
+sbt.version=0.7.5.RC1
 project.version=1.0
 build.scala.versions=2.8.1
 project.initialize=false
